--- a/index.html
+++ b/index.html
@@ -403,6 +403,62 @@
             spacing: 17.00
         });
     </script>
+<!-- 🔊 Música de fondo -->
+<audio id="bg-music" loop>
+    <source src="music/Gata celosa x Cholo Juanito.mp3" type="audio/mpeg">
+    Tu navegador no soporta el elemento de audio.
+  </audio>
+  
+  <!-- Botón para controlar la música -->
+  <div id="music-toggle"
+       style="position: fixed;
+              bottom: 20px;
+              right: 20px;
+              background: rgba(0, 0, 0, 0.6);
+              border: 2px solid rgba(255, 107, 0, 0.8);
+              color: #fff;
+              width: 50px;
+              height: 50px;
+              border-radius: 50%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              cursor: pointer;
+              z-index: 1000;
+              box-shadow: 0 0 15px rgba(255,107,0,0.5);">
+    <i class="fas fa-volume-up"></i>
+  </div>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <script>
+    const music = document.getElementById("bg-music");
+    const toggle = document.getElementById("music-toggle");
+    let playing = false;
+  
+    // Intentar reproducir música al interactuar con la página
+    document.addEventListener("click", () => {
+      if (!playing) {
+        music.play().then(() => {
+          playing = true;
+        }).catch(() => {
+          console.log("Autoplay bloqueado por el navegador.");
+        });
+      }
+    }, { once: true });
+  
+    // Control de encendido/apagado
+    toggle.addEventListener("click", () => {
+      if (playing) {
+        music.pause();
+        toggle.innerHTML = '<i class="fas fa-volume-mute"></i>';
+      } else {
+        music.play();
+        toggle.innerHTML = '<i class="fas fa-volume-up"></i>';
+      }
+      playing = !playing;
+    });
+  </script>
+  
 </body>
 <style>
     @keyframes bobbing {
