--- a/index.html
+++ b/index.html
@@ -20,6 +20,28 @@
 <body class="bg-gray-900 text-white">
     <custom-navbar></custom-navbar>
 
+    <!-- 🕸️ Intro Screen -->
+    <div id="intro" class="screen">
+      <!-- Partículas flotantes -->
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+
+      <div class="intro-content">
+        <h1>LA TIMBA REAL</h1>
+        <p>🎃 HALLOWEEN PARTY 🎃</p>
+        <p class="event-date">31 DE OCTUBRE 2025</p>
+        <button class="enter-btn">CLICK PARA ENTRAR</button>
+      </div>
+    </div>
+
     <main class="relative overflow-hidden">
         <!-- Hero Section with Vanta.js background -->
         <section id="hero" class="min-h-screen flex items-center justify-center relative">
@@ -467,5 +489,5 @@
     }
     .subtitle { animation: bobbing 3s ease-in-out infinite; }
     </style>
-
+<link rel="stylesheet" href="styles.css">
 </html>
