Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                         <i data-feather="clock" class="mr-3 mt-1 text-orange-300"></i>
                                         <div>
                                             <p class="font-bold">Hora</p>
-                                            <p class="text-gray-300">10:00 PM - 2:00 AM</p>
+                                            <p class="text-gray-300">10:00 PM - Hasta las Últimas</p>
                                         </div>
                                     </div>
                                     <div class="flex items-start">
