--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                         <i data-feather="map-pin" class="mr-3 mt-1 text-orange-300"></i>
                                         <div>
                                             <p class="font-bold">Ubicación</p>
-                                            <a href="https://maps.app.goo.gl/FTDJZgWnNEZ4Bbt68" target="_blank" class="text-gray-300 hover:text-blue-400">
+                                            <a href="#location" class="text-gray-300 hover:text-blue-400">
                                                 Av Baja 336<br>
                                               Hazme Click Aqui!
                                             </a>
