--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                    class="px-8 py-3 bg-orange-500 hover:bg-orange-600 rounded-full font-bold transition-all transform hover:scale-105">VER GALERÍA</a>
                 <a href="#rsvp"
                    class="px-8 py-3 bg-purple-600 hover:bg-purple-700 rounded-full font-bold transition-all transform hover:scale-105">REGÍSTRATE</a>
+                <a href="https://chat.whatsapp.com/HlbL06wt2k9EycI3qNtuQt" 
+                   target="_blank"
+                   class="px-8 py-3 bg-green-600 hover:bg-green-700 rounded-full font-bold transition-all transform hover:scale-105 flex items-center gap-2">
               </div>
             </div>
           </section>   
