--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                 <a href="https://chat.whatsapp.com/HlbL06wt2k9EycI3qNtuQt" 
                    target="_blank"
                    class="px-8 py-3 bg-green-600 hover:bg-green-700 rounded-full font-bold transition-all transform hover:scale-105 flex items-center gap-2">
+                   <i data-feather="message-circle"></i>
+                   GRUPO WHATSAPP
+               </a>
               </div>
             </div>
           </section>   
