--- a/index.html
+++ b/index.html
@@ -195,6 +195,28 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="carousel-slide min-w-full md:min-w-[50%] lg:min-w-[33.333%] px-4">
+                                <div
+                                    class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition-all hover:scale-105 hover:shadow-orange-500/30">
+                                    <img src="image/sideral-masoku.gif" alt="Halloween Party"
+                                        class="w-full h-64 object-cover">
+                                    <div class="p-4">
+                                        <h3 class="text-xl font-bold">SAAUUU</h3>
+                                        <p class="text-gray-400 mt-2">sin contexto</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-slide min-w-full md:min-w-[50%] lg:min-w-[33.333%] px-4">
+                                <div
+                                    class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transform transition-all hover:scale-105 hover:shadow-orange-500/30">
+                                    <img src="image/tenor.gif" alt="Halloween Party"
+                                        class="w-full h-64 object-cover">
+                                    <div class="p-4">
+                                        <h3 class="text-xl font-bold">Ya pagó KICK</h3>
+                                        <p class="text-gray-400 mt-2">¿que? de verdad!? ...</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <button
